fix: Adjust icons alignment in notes drop down menu - EXO-72270 - Meeds-io/MIPs#128
Adjust icons alignment in notes drop down menu

--- a/notes-webapp/src/main/webapp/skin/less/notes/notes.less
+++ b/notes-webapp/src/main/webapp/skin/less/notes/notes.less
@@ -213,10 +213,6 @@
 	  }
   }
 
-  #notesActionMenuBottomDrawer {
-    height: fit-content !important;
-  }
-
   #notesActionMenuBottomDrawer, .notes-application-header .note-actions-menu {
     .action-menu-item {
       min-height: 28px !important;
@@ -227,8 +223,8 @@
     }
 
     .icon-menu {
-      width: 12px;
-      height: 13px;
+      width: 28px;
+      height: 36px;
     }
   }
 
